Bug 1384000 - Call TriggerPendingAnimations in layers-free mode. r=ethlin,kats

MozReview-Commit-ID: 6Jae5rfQ8k2